--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>App List</h1>
+    <h1>recommended.pkg</h1>
     <button id="darkModeToggle">🌙 Dark Mode</button>
   </header>
   <div id="app-container" class="app-container"></div>
@@ -16,6 +16,6 @@
     <p>&copy; 2024 SaltyMedia.</p>
   </footer>
 
-  <script src="apps.js"></script>  <!-- Updated script reference -->
+  <script src="apps.js"></script>
 </body>
 </html>
